# bt

./: .build.ps1.swp  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bt.desktop  btcheck.cppcheck  build.ps1  local-build.ps1  log.json  pre-build.ps1  prebuild.py  vcpkg-configuration.json  vcpkg.json  winget-submit.ps1
.github/workflows/: build.yml  full.yml  release.yml  winget.yml
Writerside/: bt.tree  writerside.cfg
Writerside/cfg/: buildprofiles.xml  pa.js
Writerside/images/: picker.snagx
Writerside/topics/: Browser-Extensions.md  Installing.md  config-basic.md  firefox-containers.md  home.md  install-apt.md  install-msi.md  install-zip.md  mozilla-firefox.md  picker.md  portable-mode.md  prereq.md  rules.md  url-processing.md
browser-extensions/: .gitignore  README.md
browser-extensions/chromium/: README.md  background.js  content.js  core.js  manifest.json  popup.html  popup.js
browser-extensions/firefox/: background.js  container.html  container.js  manifest.json
browser-extensions/gecko/: background.js  manifest.json  protocol_page.html  protocol_page.js
bt/: CMakeLists.txt  README.md  bt.aps  bt.cpp  bt.rc  cmdline.cpp  cmdline.h  config.def  config_custom.cpp  config_custom.h  dpi-aware.manifest  globals.cpp  globals.h  log.h  model.h  res.cpp  res.h  res.inl  resource.h  state.cpp  state.h  state.hpp  template.lua
bt/app/: about_window.cpp  about_window.h  app_log.cpp  app_log.h  bookmark.cpp  bookmark.h  browser.cpp  browser.h  change_log_window.cpp  change_log_window.h  click_payload.h  config.cpp  config.h  config_window.cpp  config_window.h  dash_window.cpp  dash_window.h  discovery.cpp  discovery.h  match_rule.cpp  match_rule.h  pick_window.cpp  pick_window.h  platform.cpp  platform.h  rule_hit_log.cpp  rule_hit_log.h  script_site.cpp  script_site.h  setup.cpp  setup.h  strings.h  systray.cpp  systray.h  ui.cpp  ui.h  update_check.cpp  update_check.h  url_logger_window.cpp  url_logger_window.h  (+11 more)
bt/app/pipeline/: clearurls.cpp  clearurls.h  o365.cpp  o365.h  replacer.cpp  replacer.h  script.cpp  script.h  unshortener.cpp  unshortener.h
bt/app/security/: clearurls.cpp  clearurls.h
bt/app/ui/: about.cpp  about.h  btwidgets.cpp  btwidgets.h  config_app.cpp  config_app.h  configure.cpp  configure.h  extra_widgets.hpp  picker.cpp  picker.h  picker_app.cpp  picker_app.h  toast_app.cpp  toast_app.h  wheel_picker_app.cpp1  wheel_picker_app.h
bt/ext/: lsignal.h
bt/scripts/: integrate-win.ps1  integrate-xdg.sh  register-win.ps1
bt/tests/: globals.cpp  pipeline_step.lua  rules.cpp  script_site.cpp  url.cpp
docs/: README.md  instructions.md  release-body.md  release-notes.md
resources/ci/: local-build.ps1  pre-build.ps1  screenshots.ps1  screenshots.sh  winget-submit.ps1
resources/wix/: patch.xml  registry.wxs  registry.wxs.in  startmenu.wxs  startmenu.wxs.in
resources/xdg/: bt.desktop  postinst  prerm
scripts/: requirements.txt  vt_scan.py
test/: CMakeLists.txt  pipeline.cpp  playground.lua  rules.cpp  script_site.cpp  url.cpp
wrs/: bt.tree  c.list  main.tree  redirection-rules.xml  v.list  writerside.cfg
wrs/cfg/: buildprofiles.xml
wrs/topics/: Installing.md  commandline.md  config-basic.md  debugger.md  firefox-containers.md  home.md  install-apt.md  mozilla-firefox.md  picker.md  portable-mode.md  prereq.md  rules-process-name.md  rules.md  scripting.md  starter-topic.md  toast.md  url-pipeline.md  url-proc-scripting.md  url-proc.md  url-processing.md
